<resources>
        <string name="app_name">30 Day Challenge</string>

        <string name="intro">Welcome to the 30 Day Challenge App! Log in to get started or continue.</string>
        <string name="action_settings">About</string>
        <string name="title_activity_about">About</string>

        <string name="about">The 30 day challenge app is an app that creates goals for running and push-ups to motivate and encourage users!</string>
    <string name="info">You have 30 days to reach your set fitness goals.</string>
    <string name="credit">Developed by Hongcheng, Daniel, Xi, and Steven</string>
        <string name="login">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="begin">"Start by setting your goals"</string>
    <string name="title_activity_pushup">Push Up</string>
    <string name="pushup">Push Up</string>
    <string name="title_activity_challenge__menu">Challenge Menu</string>
    <string name="pacer">Pacer Run</string>
    <string name="day">Challenge Progress:</string>
    <string name="end">Finish</string>
    <string name="tutor">Push Up Tutorial</string>
    <string name="title_activity_pushup_tutorial">Pushup Tutorial</string>
    <string name="num_p"># of Push-Ups</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_set__goals">Set Goals</string>
</resources>
