<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="teamjoeys.dbms.umkc.challenge.Set_Goals"
>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/begin"
        android:id="@+id/begin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pushup"
        android:id="@+id/textView5"
        android:layout_below="@+id/begin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="82dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pacer"
        android:id="@+id/textView6"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/push_goal"
        android:width="100dp"
        android:layout_below="@+id/textView5"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:id="@+id/To_Menu"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/mile_goal"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/push_goal"
        android:layout_alignStart="@+id/push_goal"
        android:width="100dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/time_goal"
        android:layout_below="@+id/mile_goal"
        android:layout_alignLeft="@+id/mile_goal"
        android:layout_alignStart="@+id/mile_goal"
        android:layout_marginTop="20dp"
        android:width="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="# of Push-Ups"
        android:id="@+id/textView7"
        android:layout_alignBottom="@+id/push_goal"
        android:layout_toRightOf="@+id/To_Menu"
        android:layout_toEndOf="@+id/To_Menu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="# of Miles"
        android:id="@+id/textView8"
        android:layout_above="@+id/time_goal"
        android:layout_toRightOf="@+id/To_Menu"
        android:layout_toEndOf="@+id/To_Menu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="# of Minutes"
        android:id="@+id/textView9"
        android:layout_alignBottom="@+id/time_goal"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />
</RelativeLayout>
